@@ -11,6 +11,7 @@ CREATE TABLE fac_Cabinet (
   ZoneID int(11) NOT NULL,
   CabinetHeight int(11) NOT NULL,
   Model varchar(80) NOT NULL,
+  Keylock varchar(30) NOT NULL,
   MaxKW float(11) NOT NULL,
   MaxWeight int(11) NOT NULL,
   InstallationDate date NOT NULL,
@@ -131,6 +132,8 @@ CREATE TABLE fac_Device (
   DeviceType enum('Server','Appliance','Storage Array','Switch','Routing Chassis','Patch Panel','Physical Infrastructure') NOT NULL,
   MfgDate date NOT NULL,
   InstallDate date NOT NULL,
+  WarrantyCo VARCHAR(80) NOT NULL,
+  WarrantyExpire date NULL,
   Notes text NULL,
   Reservation tinyint(1) NOT NULL,
   PRIMARY KEY (DeviceID),
