@@ -11,6 +11,8 @@ Changes in 1.3
 --------------
 * Added an optional reservation color to the configuration options
 * Changed out button interface for a more tab friendly click interface
+* Added Warranty Company and Warranty Expiration to devices
+* Added Key/Lock Information field to Cabinets
 
 Changes in 1.2
 --------------
